@@ -1,3 +1,10 @@
+2012-01-24  Ilya Tikhonovsky  <loislo@chromium.org>
+
+        Unreviewed build fix for Qt LinuxSH4 build after r105698.
+
+        * interpreter/Interpreter.cpp:
+        (JSC::Interpreter::privateExecute):
+
 2012-01-23  Geoffrey Garen  <ggaren@apple.com>
 
         JSValue::toString() should return a JSString* instead of a UString
